# telco_churn_predictor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  log_config.py  pyproject.toml  requirements-api.txt  requirements.txt
.github/workflows/: ci.yml
api/: main.py  schemas.py
api/routers/: advice.py  health.py  predict.py
app/: app.py  churn_service.py  llm_client.py
data/processed/: telco_churn_cleaned.csv
data/tableau/: telco_churn_tableau.csv
models/: catboost_model.pkl  ensemble_voting_classifier.pkl  gradient_boosting.pkl  logistic_regression.pkl  model_metadata.json  scaler.pkl
notebooks/: 01_data_understanding.ipynb  02_data_cleaning.ipynb  03_eda.ipynb  04_modeling.ipynb
scripts/: export_tableau_data.py
src/: data_preprocessing.py  evaluate.py  features.py  train.py
tests/: conftest.py  test_api.py  test_churn_service.py  test_config.py  test_evaluate.py  test_log_config.py  test_train.py
